# ML-SarcasmDetection

./: README.md  pyproject.toml  sarcasmDetection.ipynb
