[tool.poetry]
name = "tomlinson cs561 final project"
version = "0.1.0"
description = ""
authors = ["Bobby Tomlinson <btomlinson237@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
wordcloud = "^1.9.4"
scikit-learn = "^1.6.0"
textblob = "^0.18.0.post0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
